  inconsistent results). (Arnaud)
- Fixed bug #46626 (mb_convert_case does not handle apostrophe correctly).
  (Ilia)
- Fixed bug #44182 (extract($a, EXTR_REFS) can fail to split copy-on-write
  references). (robin_fernandes at uk dot ibm dot com)
- Fixed bug #44181 (extract($a, EXTR_OVERWRITE|EXTR_REFS) can fail to create 
  references to $a). (robin_fernandes at uk dot ibm dot com)

20 Nov 2008, PHP 5.2.7RC4
- Added logging option for error_log to send directly to SAPI. (Stas)

- Fixed sybase_fetch_*() to continue reading after CS_ROW_FAIL status (Timm)
- Fixed a bug inside dba_replace() that could cause file truncation with
  invalid keys. (Ilia)
- Fixed memory leak inside readline_callback_handler_install() function.
  (Ilia)
- Fixed memory leak inside readline_completion_function() function. (Felipe)

- Fixed bug #46543 (ibase_trans() memory leaks when using wrong parameters).
  (Felipe)
- Fixed bug #46521 (Curl ZTS OpenSSL, error in config.m4 fragment).
  (jd at cpanel dot net)
- Fixed bug #46496 (wddx_serialize treats input as ISO-8859-1). (Mark Karpeles)
- Fixed bug #46127 (php_openssl_tcp_sockop_accept forgets to set context
  on accepted stream) (Mark Karpeles, Pierre)
- Fixed bug #44818 (php://memory writeable when opened read only). (Arnaud)
- Fixed bug #41033 (enable signing with DSA keys. (gordyf at google dot com,
  Pierre)
- Fixed bug #30312 (crash in sybase_unbuffered_query() function). (Timm)
- Fixed stream_get_contents() when using $maxlength and socket is not
  closed. indeyets@php.net on #46049. (Arnaud)

06 Nov 2008, PHP 5.2.7RC3
- Added PHP_MAJOR_VERSION, PHP_MINOR_VERSION, PHP_RELEASE_VERSION,
  PHP_EXTRA_VERSION, PHP_VERSION_ID, PHP_ZTS and PHP_DEBUG constants. (Pierre)

- Updated timezone database to version 2008.9. (Derick)

- Fixed bug #46426 (offset parameter of stream_get_contents() does not work
  for "0"). (Felipe)
- Fixed bug #46406 (Unregistering nodeclass throws E_FATAL). (Rob)